# protein_diff

./: README.md  TODO.md  pyproject.toml
scripts/download_data/: download_assemblies.py  download_ccd.py  get_pdb_ids.py  pdb_ids_small.txt
src/prot_diff/: main.py
src/prot_diff/data/components/download_data/: download_assemblies.py  pdb_ids.txt
tests/: test_pdb_download.py
