[project]
name = "protein-diff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-colorlog==1.2.0",
    "hydra-core==1.3.2",
    "hydra-optuna-sweeper==1.2.0",
    "lightning>=2.0.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "rich>=14.2.0",
    "rootutils>=1.0.7",
    "torch>=2.0.0",
    "torchmetrics>=0.11.4",
    "torchvision>=0.15.0",
]
