[project]
name = "protein-diff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.1",
    "h5py>=3.15.1",
    "hydra-colorlog==1.2.0",
    "hydra-core==1.3.2",
    "hydra-optuna-sweeper==1.2.0",
    "lightning>=2.0.0",
    "numpy>=2.2.6",
    "openmm>=8.4.0.post1",
    "pdbfixer-wheel>=1.11.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "rootutils>=1.0.7",
    "tdqm>=0.0.1",
    "torch>=2.0.0",
    "torchmetrics>=0.11.4",
    "torchvision>=0.15.0",
    "tqdm>=4.67.1",
]
