[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protdiff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maxim Kirby", email = "maxim.kirby@mail.utoronto.ca" }
]
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.1",
    "click>=8.3.0",
    "h5py>=3.15.1",
    "hydra-colorlog==1.2.0",
    "hydra-core==1.3.2",
    "hydra-optuna-sweeper==1.2.0",
    "lightning>=2.0.0",
    "numpy>=2.2.6",
    "openmm>=8.4.0.post1",
    "pdbfixer-wheel>=1.11.0", # This is an unofficial fork of the pdbfixer repo for PyPI installation
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "rootutils>=1.0.7",
    "tdqm>=0.0.1",
    "torch>=2.0.0",
    "torchmetrics>=0.11.4",
    "torchvision>=0.15.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "protdiff",
]


[project.scripts]
protdiff = "prot_diff.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/prot_diff"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["prot_diff"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.uv.sources]
protdiff = { workspace = true }
